--- a/JOGO_INFANTIL/jogo_letra.html
+++ b/JOGO_INFANTIL/jogo_letra.html
@@ -123,7 +123,7 @@ console.log("Musica Ogg: " + musicas_array[indice_musica][1]);
 		</div>
 		
 		<div style="width:200px; height:200px; border:3px solid white; border-radius:10px; text-align:center; font-size: 53px; margin:0 auto; margin-top: 30px; margin-bottom: 30px; line-height: 200px; background-color: #2BB137;" id="letraInserida">
-			<img style="border-radius:100px; margin-top: 24px;" src="imagens/cat.gif" alt="cat typing keyboard." width="200" height:"200">
+			<img style="border-radius:100px; margin-top: 24px;" src="imagens/cat.gif" alt="cat typing keyboard." width="200" height="200">
 		</div>
 	
 	</div>
